samples/errors/bad-call.stkn
func f0(a, b)
    return a + b

f0(0)

func f1(a, b)
    func f2(x)
        return a * x + b
    return f2

x: f1(0, 1)
x()
x(0, 1)
